styles/sytles.css
/* Imports */
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300&family=Raleway:wght@100&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300;400;500;600;700&display=swap");

/* Unviersal Selector for all elements */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    text-decoration: none;
}

.background_blur {
    backdrop-filter: blur(2px);
    background: rgba(255, 255, 255, 0.2);
    height: 100%;
    width: 100vw;
}

.content_container {
    background-image: url(../images/hoya-leaf.jpg);
    background-position: 0% 40%;
    background-repeat: no-repeat;
    background-size: cover;
    height: 85vh;
}

.down_button_container {
    display: flex;
}

.down_button {
    border-bottom: 3px solid rgba(129, 129, 129, 0.75);
    border-right: 3px solid rgba(129, 129, 129, 0.75);
    display: inline-block;
    height: 15px;
    transform: rotate(45deg);
    transition: border-color 100ms ease-in-out;
    width: 15px;
}

.down_button:hover {
    border-bottom: 3px solid rgba(255, 255, 255, 1);
    border-right: 3px solid rgba(255, 255, 255, 1);
}

.flex_col {
    align-items: center;
    display: flex;
    flex-direction: column;
}

.flex_row {
    align-items: center;
    display: flex;
    flex-direction: row;
    height: 100%;
    justify-content: center;
}

.footer_container {
    align-items: center;
    background-color: #3e3e3d;
    display: flex;
    height: 5vh;
    justify-content: center;
    width: 100%;
}

.footer_container p {
    color: rgb(255, 255, 255);
    font-family: "Quicksand", sans-serif;
    font-size: 12px;
    padding: 5px;
}

.image_container {
    display: flex;
    margin: 10px auto;
}

.image_container img {
    border-radius: 10px;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.75);
    margin: 0px auto;
    width: 85%;
}

.introduction_container {
    background-color: rgb(245, 218, 181);
    border-radius: 10px;
    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.9);
    margin: 10px auto;
    padding: 10px;
    text-align: center;
    width: 80%;
}

.introduction_container * {
    color: #414141;
    font-family: "Josefin Slab", serif;
    font-weight: 700;
    margin: 5px 0px;
}

.introduction_container p {
    font-weight: 600;
    width: 95%;
}

.navbar {
    height: 4vh;
}

.navbar ul {
    background-color: #3e3e3d;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    list-style-type: none;
    width: 100%;
}

.navbar ul li {
    align-content: center;
    display: block;
    height: 100%;
    position: relative;
}

.navbar ul li a {
    align-items: center;
    color: rgb(240, 240, 240);
    display: flex;
    font-family: "Quicksand", sans-serif;
    font-size: 15px;
    height: 100%;
    justify-content: center;
    text-decoration: none;
    transition: box-shadow 200ms ease-in-out;
    transition: background-color 200ms ease-in-out;
    width: 100px;
}

.navbar ul li ul {
    background-color: rgb(245, 218, 181, 0.95);
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
    display: none;
    position: absolute;
    width: 150px;
}

.navbar ul li ul li {
    width: 100%;
}

.navbar ul li ul li a {
    color: black;
    font-family: "Quicksand", sans-serif;
    font-size: 15px;
    padding: 5px 0px;
    width: 100%;
}

.main_nav_tile:hover {
    /* Opted for transitions instead of animation*/
    /* animation-duration: 200ms;
    animation-fill-mode: forwards;
    animation-name: bottom_gradual_glow; */
    background-color: #818181;
    box-shadow: inset 0px -2px rgb(255, 255, 255);
    font-weight: bold;
}

.navbar ul li:hover ul {
    display: block;
}

.navbar ul li ul li a:hover {
    animation-duration: 200ms;
    animation-fill-mode: forwards;
    animation-name: bottom_gradual_fade;
    font-weight: bold;
}

.navbar ul li ul li:last-child a {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}

.title_container {
    background-color: #ddb57d;
    box-shadow: inset 0px -2px rgba(0, 0, 0, 0.5);
    display: flex;
    height: 10vh;
    top: 0;
    width: 100vw;
}

.title_container a {
    color: #414141;
    font-family: "Quicksand", sans-serif;
    font-size: 50px;
}

.title_container h1 {
    margin: auto;
    padding: auto 0px;
    text-shadow: 1px 2px 2px #000000;
}

/* Animations used */
@keyframes bottom_gradual_glow {
    0% {
        background-color: rgba(255, 255, 255, 0.1);
    }
    50% {
        background-color: rgba(255, 255, 255, 0.2);
    }
    100% {
        background-color: rgba(255, 255, 255, 0.3);
    }
}

@keyframes bottom_gradual_fade {
    0% {
        background-color: rgba(255, 255, 255, 0.05);
    }
    50% {
        background-color: rgba(128, 128, 128, 0.1);
    }
    100% {
        background-color: rgba(128, 128, 128, 0.15);
    }
}

/* Media Controls can be added here*/
@media screen and (max-width: 768px) {
    .navbar {
        height: 5vh;
    }
    .navbar ul {
        justify-content: space-evenly;
        display: flex;
    }
    .navbar ul li a {
        width: auto;
    }
    .navbar ul li:hover ul {
        position: fixed;
        left: 0;
        width: 100vw;
    }
}

